# trusera-agent-sdk

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  setup_dev.sh
.github/workflows/: codeql.yml  publish.yml  test.yml
examples/: basic_usage.py  decorator_usage.py  langchain_example.py
tests/: __init__.py  conftest.py  test_autogen.py  test_client.py  test_crewai.py  test_decorators.py  test_events.py  test_langchain.py
trusera_sdk/: __init__.py  client.py  decorators.py  events.py
trusera_sdk/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
