[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusera-sdk"
version = "0.2.0"
description = "Python SDK for monitoring AI agents with Trusera"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Trusera", email = "dev@trusera.dev" }]
keywords = ["ai", "agents", "monitoring", "security", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.28.1"]

[project.optional-dependencies]
langchain = ["langchain-core>=1.2.28"]
crewai = ["crewai>=1.14.3"]
autogen = ["pyautogen>=0.10.0"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0", "ruff>=0.15.10", "mypy>=1.20.0"]

[project.urls]
Homepage = "https://trusera.dev"
Repository = "https://github.com/Trusera/trusera-agent-sdk"
Documentation = "https://docs.trusera.dev/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["trusera_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
